--- a/assets/documentation.css
+++ b/assets/documentation.css
@@ -1730,7 +1730,7 @@ table#console-open-commands .na {
 .bloch-sphere-qubit {
 
 	display: inline-block;	
-	margin:  0 0.5rem;
+	margin:  0 0.4rem;
 	width:  3rem;
 	height: 3rem;
 	border-radius: 100%;
@@ -1765,7 +1765,8 @@ table#console-open-commands .na {
 #bloch-sphere-qubit-descriptions {
 
 	position: relative;
-	height: 6rem;
+	margin: 2rem 0 0 0;
+	height: 9rem;
 	width: 100%;
 	overflow: hidden;
 }
@@ -1783,7 +1784,7 @@ table#console-open-commands .na {
 .bloch-sphere-qubit-description.show {
 
 	opacity: 1;
-	transition: opacity 1s 0.5s;
+	transition: opacity 0.7s 0.3s;
 }
 #bloch-sphere {
 
