--- a/assets/documentation.css
+++ b/assets/documentation.css
@@ -1712,14 +1712,11 @@ table#console-open-commands .na {
 .bloch-sphere-qubit-selector, 
 .bloch-sphere-gate-selector {
 
-	/*display: block;*/
 	width: 100%;
 	margin: 2rem 0 0 0;
 	border-radius: 0.4rem;
 	padding: 0;
 	font-family: var( --Q-font-family-sans );
-	overflow: hidden;
-	/*box-shadow: 0.1rem 0.1rem 0.2rem rgba( 0, 0, 0, 0.3 );*/
 	color: 	hsl( 
 		
 		var( --Q-color-blue-hue ), 
@@ -1735,7 +1732,6 @@ table#console-open-commands .na {
 	width:  3rem;
 	height: 3rem;
 	border-radius: 100%;
-	border: 1px solid var( --Q-hyperlink-internal-color );
 	color: var( --Q-hyperlink-internal-color );
 	text-align: center;
 	font-weight: 400;
@@ -1748,100 +1744,71 @@ table#console-open-commands .na {
 	    -ms-user-select: none;
 	        user-select: none;
 }
-.bloch-sphere-qubit:hover {
+.bloch-sphere-qubit:hover:before,
+.bloch-sphere-qubit.selected:before {
 
-	/*background-color: var( --Q-hyperlink-internal-color );*/
-	color: white;
-	transition: none;
-}
-
-/*.bloch-sphere-qubit:hover::before {
-
-	--borderGap: 2px;
-	--borderThickness: 2px;
-
+	box-sizing: border-box;
 	content: '';
 	position: absolute;
-	width:  calc( 100% + var( --borderGap ) * 2 + var( --borderThickness ) * 2 );
-	height: calc( 100% + var( --borderGap ) * 2 + var( --borderThickness ) * 2 );
-	top:    calc( -var( --borderGap ) - var( --borderThickness ));
-	left:   calc( -var( --borderGap ) - var( --borderThickness ));
-	top: -4px;
-	left: -4px;
-	border: var( --borderThickness ) solid black;
+	margin:   0;
+	padding:  0;
+	top:      0;
+	left:     0;
+	width:  100%;
+	height: 100%;
+	transform: scale( 1.2 );
+	transform-origin: center;
+	border: 1px solid hsl( var( --Q-color-base-hue ), 5%, 80% );
 	border-radius: 50%;
 }
-.bloch-sphere-qubit.selected,
-.bloch-sphere-qubit.selected:hover {
+.bloch-sphere-qubit.selected:before {
 
-	border: 1px solid black;
-	background-color: black;
-	color: white;
-}*/
+	border-color: hsl( var( --Q-color-base-hue ), 5%, 60% );
+}
 
 
-
-
-
-
-
-
-
-#bloch-sphere-qubit-h {
+#bloch-sphere-qubit-h {/*  HORIZONTAL white  */
 	
 	border-color: transparent;
-	background-color: hsl( 0, 0%, 90% );
+	background-color: hsl( 0, 0%, 95% );
 	color: hsl( 0, 0%, 15% );
 }
-#bloch-sphere-qubit-d {
+#bloch-sphere-qubit-d {/*  DIAGONAL red  */
 
 	border-color: transparent;
-	background-color: hsl( 0, 90%, 50% );
+	background-color: hsl( 0, 85%, 50% );
 	color: white;
 }
-#bloch-sphere-qubit-l {
+#bloch-sphere-qubit-l {/*  LEFT-HAND CIRCULAR POLARIZED green  */
 
 	border-color: transparent;
-	background-color: hsl( 90, 90%, 45% );
+	background-color: hsl( 90, 80%, 45% );
 	color: white;
 }
-#bloch-sphere-qubit-a {
+#bloch-sphere-qubit-a {/*  ANTI-DIAGONAL cyan  */
 	
 	border-color: transparent;
-	background-color: hsl( 180, 90%, 45% );
+	background-color: hsl( 180, 80%, 45% );
 	color: white;
 }
-#bloch-sphere-qubit-r {
+#bloch-sphere-qubit-r {/*  RIGHT-HAND CIRCULAR POLARIZED purple  */
 
 	border-color: transparent;
-	background-color: hsl( 270, 90%, 60% );
+	background-color: hsl( 270, 85%, 50% );
 	color: white;	
 }
-#bloch-sphere-qubit-v {
+#bloch-sphere-qubit-v {/*  VERTICAL black  */
 	
 	border-color: transparent;
-	background-color: hsl( 0, 0%, 30% );
+	background-color: hsl( 0, 0%, 25% );
 	color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
 .bloch-sphere-qubit-name {
 
 	font-size:   1.5rem;
 	line-height: 2.0rem;
 	letter-spacing: -0.03em;
 }
-
-
 
 
 
@@ -1895,7 +1862,6 @@ table#console-open-commands .na {
 
 
 
-
 .bloch-sphere-gate-container {
 
 	width: calc( 100% / 7 );
@@ -1935,6 +1901,9 @@ table#console-open-commands .na {
 
 	white-space: pre;
 }
+
+
+
 
 
 
