--- a/Q/Q-Circuit-Editor.css
+++ b/Q/Q-Circuit-Editor.css
@@ -94,7 +94,6 @@
 
 
 
-
 .Q-circuit,
 .Q-circuit-palette {
 
@@ -123,6 +122,7 @@
 	margin: 1rem 0 2rem 0;
 	/*border-top: 2px solid hsl( 0, 0%, 50% );*/
 }
+.Q-parameters-box,
 .Q-circuit-board-foreground {
 	
 	line-height: 3.85rem;
@@ -265,6 +265,7 @@
 	user-select: none;
 }
 /*.Q-circuit-palette,*/
+.Q-parameters-box,
 .Q-circuit-board-foreground,
 .Q-circuit-board-background,
 .Q-circuit-clipboard {
@@ -275,6 +276,19 @@
 	grid-auto-columns: 4rem;
 	grid-auto-flow: column;
 }
+
+.Q-parameters-box {
+	
+	position: absolute;
+	display: none; 
+	z-index: 100;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: whitesmoke;
+}
+
 /*.Q-circuit-palette,*/
 .Q-circuit-board-foreground,
 .Q-circuit-board-background {
@@ -364,8 +378,16 @@
 	);
 }
 
+.Q-parameter-box-exit {
+	position: relative;
+	right: 0;
+	left: 0;
+	width: 5rem;
+	height: 2.5rem;
+	background-color: whitesmoke;
+}
 
-
+.Q-parameters-box > div,
 .Q-circuit-palette > div,
 .Q-circuit-clipboard > div,
 .Q-circuit-board-foreground > div {
@@ -541,7 +563,6 @@
  /*                */
 /******************/
 
-
 .Q-circuit-operation {
 	
 	position: relative;
@@ -607,7 +628,7 @@
 			rgba( 0, 0, 0, 0.05 )
 		)*/;
 }
-.Q-circuit-palette .Q-circuit-operation:hover {
+.Q-parameter-box-exit .Q-circuit-palette .Q-circuit-operation:hover {
 
 	/*background-color: rgba( 255, 255, 255, 0.6 );*/
 	background-color: white;
@@ -719,7 +740,25 @@
 	font-size: 0;
 }
 
+.Q-parameter-box-input-container {
+	position: relative;
+	text-align: center;
+	grid-auto-columns: 4rem;
+	grid-auto-flow: column;
+}
 
+.Q-parameter-box-input {
+	position: relative;
+	border-radius: .2rem;
+	margin-left: 10px;
+	font-family: var( --Q-font-family-mono );
+}
+
+.Q-parameter-input-label {
+	position: relative;
+	color: var( --Q-color-blue );
+	font-family: var( --Q-font-family-mono );
+}
 
 
 
@@ -806,6 +845,8 @@
 	display: block;
 	box-shadow: 0.4rem 0.4rem 0.3rem rgba( 0, 0, 0, 0.2 );
 }
+
+
 
 
 
